--- a/src/pages/Film/components/Overview/styles.module.scss
+++ b/src/pages/Film/components/Overview/styles.module.scss
@@ -18,78 +18,87 @@
             display: flex;
             flex-direction: column;
     
-            > div {
-                display: flex;
-                align-items: center;
-            }
-    
-            > p {
-                max-width: 980px;
-            }
+            // > div {
+            //     display: flex;
+            //     align-items: center;
+            // }
         }
 
         > .film-poster {
             border-radius: 8px;
             overflow: hidden;
             margin-right: 20px;
+            width: 300px;
 
-            > div:nth-of-type(1) {
-                justify-content: center;
-                width: 300px;
+            > button {
+                border: none;
+                background: none;
+                width: 100%;
                 height: 450px;
-            }
-    
-            > .poster {
-                background-repeat: no-repeat;
-                background-size: cover;
-                position: relative;
                 cursor: pointer;
 
-                &:after {
-                    position: absolute;
-                    background-color: rgba(32,32,32,0.8);
-                    backdrop-filter: blur(15px);
-                    top: 0;
-                    right: 0;
-                    bottom: 0;
-                    left: 0;
-                    content: "";
-                    opacity: 0;
-                    transition: linear 0.2s;
-                }
-    
                 > div {
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
                     display: flex;
+                    justify-content: center;
                     align-items: center;
-                    opacity: 0;
-                    transition: linear 0.2s;
-                    z-index: 3;
     
-                    > img {
-                        width: 21px;
-                        height: 21px;
-                        object-fit: cover;
-                        margin-right: 6px;
-                    }
-                    
-                    > span {
-                        color: white;
-                        font-size: 21px;
-                    }
-                }
-    
-                &:hover {
                     &:after {
-                        opacity: 1;
+                        position: absolute;
+                        background-color: rgba(32,32,32,0.8);
+                        backdrop-filter: blur(15px);
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        left: 0;
+                        content: "";
+                        opacity: 0;
+                        transition: linear 0.2s;
                     }
-
+    
+                    &:hover {
+                        &:after {
+                            opacity: 1;
+                        }
+    
+                        > div {
+                            opacity: 1;
+                        }
+                    }
+        
                     > div {
-                        opacity: 1;
+                        display: flex;
+                        align-items: center;
+                        opacity: 0;
+                        transition: linear 0.2s;
+                        z-index: 2;
+        
+                        > img {
+                            width: 21px;
+                            height: 21px;
+                            object-fit: cover;
+                            margin-right: 6px;
+                        }
+                        
+                        > span {
+                            color: white;
+                            font-size: 21px;
+                        }
                     }
                 }
             }
 
             > .no-image {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 450px;
                 background-color: #dadada;
                 cursor: default;
 
@@ -100,8 +109,10 @@
                 }
             }
     
-            > div:nth-of-type(2) {
+            > .now-streaming {
+                display: flex;
                 justify-content: center;
+                align-items: center;
                 background-color: rgb(3, 37, 65);
                 padding: 10px 0;
     
@@ -141,6 +152,11 @@
                     opacity: 0.8;
                     font-weight: 400;
                 }
+            }
+
+            > div {
+                display: flex;
+                align-items: center;
             }
     
             > div:nth-of-type(1) {
@@ -214,27 +230,6 @@
                             width: 40px;
                         }
                     }
-    
-                    &:last-child {
-                        margin-right: 0;
-                        cursor: pointer;
-    
-                        > img {
-                            width: 22px;
-                            height: 22px;
-                            object-fit: cover;
-                            margin-right: 5px;
-                        }
-        
-                        > span {
-                            font-weight: 600;
-                        }
-    
-                        &:hover {
-                            color: #E8E8E8;
-                            transition: linear 0.1s;
-                        }
-                    }
                 }
     
                 > .actions-container {
@@ -295,6 +290,30 @@
                         }
                     }
                 }
+                
+                > button {
+                    border: none;
+                    background: none;
+                    margin-top: 10px;
+                    margin-right: 0;
+                    cursor: pointer;
+                    display: flex;
+                    align-items: center;
+                    font-size: 16px;
+                    font-weight: 600;
+
+                    &:hover {
+                        color: #E8E8E8;
+                        transition: linear 0.1s;
+                    }
+
+                    > img {
+                        width: 22px;
+                        height: 22px;
+                        object-fit: cover;
+                        margin-right: 5px;
+                    }
+                }
             }
     
             > .tagline {
@@ -311,9 +330,12 @@
                 margin: 20px 0 8px 0;
             }
 
+            > p {
+                max-width: 980px;
+            }
+
             > .creator-container {
                 margin-top: 10px;
-                display: flex;
                 flex-wrap: wrap;
 
                 > div {
@@ -350,18 +372,16 @@
         > div {
             flex-direction: column;
 
-            > div {
-                > p {
-                    max-width: 680px;
-                }
-            }
-
             > .film-poster {
                 margin: 0;
             }
     
             > .film-info {
                 margin: 40px 0 0 0;
+
+                > p {
+                    max-width: 680px;
+                }
 
                 > .creator-container {
                     > div {
