--- a/src/pages/Film/components/Social/styles.module.scss
+++ b/src/pages/Film/components/Social/styles.module.scss
@@ -2,6 +2,11 @@
     padding: 30px 0;
     border-bottom: 1px solid #d7d7d7;
 
+    > h2 {
+        font-size: 22px;
+        font-weight: 600;
+    }
+
     > div {
         display: flex;
 
@@ -11,12 +16,13 @@
             margin-right: 50px;
         }
 
-        > ul {
+        > div {
             display: flex;
             flex-wrap: wrap;
             
-            > li {
-                list-style: none;
+            > button {
+                border: none;
+                background: none;
                 font-size: 18px;
                 font-weight: 600;
                 cursor: pointer;
