--- a/src/pages/Film/components/Recommendations/styles.module.scss
+++ b/src/pages/Film/components/Recommendations/styles.module.scss
@@ -97,11 +97,14 @@
         > a {
           color: black;
           text-decoration: none;
+          overflow: hidden;
 
           > h4 {
-            cursor: pointer;
             font-weight: 400;
             padding-right: 20px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
           }
         }
       }
