--- a/src/pages/PopularPeople/components/PeopleDataDisplay/styles.module.scss
+++ b/src/pages/PopularPeople/components/PeopleDataDisplay/styles.module.scss
@@ -53,6 +53,9 @@
         font-size: 14.5px;
         font-weight: 400;
         color: rgba(0,0,0,0.6);
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
   }
