--- a/src/pages/Film/components/Overview/styles.module.scss
+++ b/src/pages/Film/components/Overview/styles.module.scss
@@ -208,8 +208,8 @@
             width: 110px;
 
             > .overview-percentage {
-              width: 60px;
-              height: 60px;
+              width: 70px;
+              height: 70px;
               cursor: pointer;
 
               &:hover {
@@ -220,7 +220,7 @@
 
             > span {
               position: absolute;
-              right: 0;
+              right: -8px;
               font-weight: 700;
               width: 40px;
             }
