--- a/src/pages/Film/components/Social/styles.module.scss
+++ b/src/pages/Film/components/Social/styles.module.scss
@@ -145,12 +145,47 @@
         box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
         border-radius: 8px;
 
-        &:first-child {
+        &:nth-of-type(1) {
           > div {
-            > p {
-              > span {
-                font-weight: normal;
-              }
+            > div {
+              background-color: rgb(210, 144, 1);
+              width: 32px;
+              height: 32px;
+              border-radius: 50%;
+              color: white;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
+        }
+
+        &:nth-of-type(2) {
+          > div {
+            > div {
+              background-color: rgb(1, 119, 210);
+              width: 32px;
+              height: 32px;
+              border-radius: 50%;
+              color: white;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+          }
+        }
+
+        &:nth-of-type(3) {
+          > div {
+            > div {
+              background-color: rgb(128, 91, 231);
+              width: 32px;
+              height: 32px;
+              border-radius: 50%;
+              color: white;
+              display: flex;
+              justify-content: center;
+              align-items: center;
             }
           }
         }
@@ -169,22 +204,10 @@
             width: 200px;
           }
 
-          > img {
-            width: 32px;
-            height: 32px;
-            object-fit: cover;
-            border-radius: 50%;
-          }
-
-          > div {
-            background-color: rgba(1, 119, 210, 1);
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+          > p {
+            > span {
+              font-weight: normal;
+            }
           }
 
           > h4 {
